# EjemploCPPQML

./: .qmlls.ini  CMakeLists.txt
Inc/: cppproperty.h  folderslx.h  objectqml.h  utilities.h
Qml/: foldersImage.qml
Src/: cppproperty.cpp  folderslx.cpp  main.cpp  objectqml.cpp  utilities.cpp
builds/Qt-6.7.2-mingw_64/Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  build-Debug.ninja  build-RelWithDebInfo.ninja  build-Release.ninja  build.ninja  cmake_install.cmake  compile_commands.json
builds/Qt-6.7.2-mingw_64/Debug/.qt/: QtDeploySupport-Debug.cmake  QtDeploySupport-RelWithDebInfo.cmake  QtDeploySupport-Release.cmake  QtDeployTargets-Debug.cmake  QtDeployTargets-RelWithDebInfo.cmake  QtDeployTargets-Release.cmake
builds/Qt-6.7.2-mingw_64/Debug/.qt/deploy_qml_imports/: appEjemploCPPQML-Release.cmake
builds/Qt-6.7.2-mingw_64/Debug/.qt/qml_imports/: appEjemploCPPQML_build.cmake  appEjemploCPPQML_build.rsp  appEjemploCPPQML_conf.cmake  appEjemploCPPQML_conf.rsp
builds/Qt-6.7.2-mingw_64/Debug/.qt/rcc/: qmake_EjemploCPPQML.qrc  qrc_appEjemploCPPQML_raw_qml_0.cpp  qrc_qmake_EjemploCPPQML.cpp
builds/Qt-6.7.2-mingw_64/Debug/.rcc/qmlcache/: appEjemploCPPQML_main_qml.cpp  appEjemploCPPQML_qml_loader_file_list.rsp  appEjemploCPPQML_qmlcache_loader.cpp
builds/Qt-6.7.2-mingw_64/Debug/EjemploCPPQML/: appEjemploCPPQML_qml_module_dir_map.qrc
builds/Qt-6.7.2-mingw_64/Debug/appEjemploCPPQML_autogen/: deps  mocs_compilation_Debug.cpp
builds/Qt-6.7.2-mingw_64/Debug/meta_types/: appEjemploCPPQML_json_file_list.txt  appEjemploCPPQML_json_file_list.txt.timestamp
(+52 files in other folders)
